--- a/yourcaryourway-chat/src/main/resources/static/css/main.css
+++ b/yourcaryourway-chat/src/main/resources/static/css/main.css
@@ -1,174 +1,287 @@
-/* Applique un box-sizing global */
 * {
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
     box-sizing: border-box;
 }
 
-/* Style de base pour le document */
-html, body {
+html,body {
     height: 100%;
+    overflow: hidden;
+}
+
+body {
     margin: 0;
     padding: 0;
+    font-weight: 400;
     font-family: "Helvetica Neue", Helvetica, Arial, sans-serif;
     font-size: 1rem;
     line-height: 1.58;
-    color: #333;
-    background-color: #f4f4f4; /* Gris clair pour le fond */
+    color: #34495e;
+    background-color: #f4f4f4;
+    height: 100%;
 }
 
-/* Correction pour les flottants */
 .clearfix:after {
-    content: "";
     display: block;
+    content: "";
     clear: both;
 }
 
-/* Cache les éléments avec la classe .hidden */
 .hidden {
     display: none;
 }
 
-/* Style des formulaires */
 .form-control {
     width: 100%;
     min-height: 38px;
     font-size: 15px;
     border: 1px solid #c8c8c8;
-    padding-left: 10px;
-    outline: none;
-    border-radius: 4px;
 }
 
-/* Groupe de formulaire */
 .form-group {
     margin-bottom: 15px;
 }
 
-/* Style des titres */
-h1, h2 {
+input {
+    padding-left: 10px;
+    outline: none;
+}
+
+h1, h2, h3, h4, h5, h6 {
     margin-top: 20px;
     margin-bottom: 20px;
-    color: #444;
 }
 
 h1 {
-    font-size: 2em;
-    font-weight: bold;
+    font-size: 1.7em;
 }
 
-h2 {
-    font-size: 1.5em;
-    font-weight: 500;
+a {
+    color: #2c3e50;
 }
 
-/* Style des boutons */
 button {
-    padding: 0.6rem 1rem;
+    box-shadow: none;
+    border: 1px solid transparent;
     font-size: 14px;
-    border-radius: 4px;
-    border: none;
+    outline: none;
+    line-height: 100%;
+    white-space: nowrap;
+    vertical-align: middle;
+    padding: 0.6rem 1rem;
+    border-radius: 2px;
+    transition: all 0.2s ease-in-out;
     cursor: pointer;
-    transition: background-color 0.3s ease;
+    min-height: 38px;
+}
+
+button.default {
+    background-color: #bdc3c7;
+    color: #34495e;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
 }
 
 button.primary {
-    background-color: #007BFF; /* Bleu sobre */
-    color: white;
-}
-
-button.primary:hover {
-    background-color: #0056b3; /* Bleu foncé au survol */
+    background-color: #2c3e50;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+    color: #ecf0f1;
 }
 
 button.accent {
-    background-color: #6c757d; /* Gris foncé pour accentuer */
-    color: white;
+    background-color: #2c3e50;
+    box-shadow: 0 2px 2px 0 rgba(0, 0, 0, 0.12);
+    color: #ecf0f1;
 }
 
-button.accent:hover {
-    background-color: #5a6268; /* Gris un peu plus foncé au survol */
-}
-
-/* Mise en page des pages utilisateur et chat */
 #username-page {
-text-align: center;
-display: flex;
-align-items: center;
-justify-content: center;
-height: 100vh;
+    text-align: center;
 }
 
 .username-page-container {
-    background: #fff;
+    background: #ecf0f1;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
-    border-radius: 6px;
-    padding: 40px;
+    border-radius: 2px;
     width: 100%;
-    max-width: 400px;
+    max-width: 500px;
+    display: inline-block;
+    margin-top: 42px;
+    vertical-align: middle;
+    position: relative;
+    padding: 35px 55px 35px;
+    min-height: 250px;
+    position: absolute;
+    top: 50%;
+    left: 0;
+    right: 0;
+    margin: 0 auto;
+    margin-top: -160px;
 }
 
-/* Chat */
+.username-page-container .username-submit {
+    margin-top: 10px;
+}
+
+
 #chat-page {
-height: 100%;
-background-color: #ffffff;
+    position: relative;
+    height: 100%;
 }
 
 .chat-container {
     max-width: 700px;
-    margin: 0 auto;
-    background-color: #ffffff;
+    margin-left: auto;
+    margin-right: auto;
+    background-color: #ecf0f1;
     box-shadow: 0 1px 11px rgba(0, 0, 0, 0.27);
-    border-radius: 6px;
     margin-top: 30px;
-    padding: 20px;
-    display: flex;
-    flex-direction: column;
     height: calc(100% - 60px);
+    max-height: 600px;
+    position: relative;
 }
 
-/* Style pour les messages */
-#messageArea {
-list-style-type: none;
-padding: 0;
-margin: 0;
-flex-grow: 1;
-overflow-y: auto;
-padding: 20px;
-border-bottom: 1px solid #ececec;
+#chat-page ul {
+    list-style-type: none;
+    background-color: #FFF;
+    margin: 0;
+    overflow: auto;
+    overflow-y: scroll;
+    padding: 0 20px 0px 20px;
+    height: calc(100% - 150px);
 }
 
-#messageArea li {
-padding: 10px;
-margin-bottom: 10px;
-background-color: #f8f9fa;
-border-radius: 6px;
-word-wrap: break-word;
+#chat-page #messageForm {
+    padding: 20px;
 }
 
-#messageArea .chat-message i {
-background-color: #007bff; /* Couleur d'avatar bleu */
-color: white;
+#chat-page ul li {
+    line-height: 1.5rem;
+    padding: 10px 20px;
+    margin: 0;
+    border-bottom: 1px solid #f4f4f4;
 }
 
-/* Header du chat */
-.chat-header {
-    padding: 15px;
-    background-color: #007BFF; /* Bleu pour le header */
-    color: white;
+#chat-page ul li p {
+    margin: 0;
+}
+
+#chat-page .event-message {
+    width: 100%;
     text-align: center;
-    border-radius: 6px 6px 0 0;
+    clear: both;
 }
 
-/* Zone de connexion */
+#chat-page .event-message p {
+    color: #777;
+    font-size: 14px;
+    word-wrap: break-word;
+}
+
+#chat-page .chat-message {
+    padding-left: 68px;
+    position: relative;
+}
+
+#chat-page .chat-message i {
+    position: absolute;
+    width: 42px;
+    height: 42px;
+    overflow: hidden;
+    left: 10px;
+    display: inline-block;
+    vertical-align: middle;
+    font-size: 18px;
+    line-height: 42px;
+    color: #ecf0f1;
+    text-align: center;
+    border-radius: 50%;
+    font-style: normal;
+    text-transform: uppercase;
+}
+
+#chat-page .chat-message span {
+    color: #34495e;
+    font-weight: 600;
+}
+
+#chat-page .chat-message p {
+    color: #43464b;
+}
+
+#messageForm .input-group input {
+    float: left;
+    width: calc(100% - 85px);
+}
+
+#messageForm .input-group button {
+    float: left;
+    width: 80px;
+    height: 38px;
+    margin-left: 5px;
+}
+
+.chat-header {
+    text-align: center;
+    padding: 15px;
+    border-bottom: 1px solid #ececec;
+}
+
+.chat-header h2 {
+    margin: 0;
+    font-weight: 500;
+}
+
 .connecting {
     padding-top: 5px;
     text-align: center;
     color: #777;
+    position: absolute;
+    top: 65px;
+    width: 100%;
 }
 
-/* Media Queries pour réactivité */
-@media screen and (max-width: 480px) {
-    .username-page-container,
+
+@media screen and (max-width: 730px) {
+
     .chat-container {
-        padding: 20px;
+        margin-left: 10px;
+        margin-right: 10px;
+        margin-top: 10px;
+    }
+}
+
+@media screen and (max-width: 480px) {
+    .chat-container {
+        height: calc(100% - 30px);
+    }
+
+    .username-page-container {
+        width: auto;
+        margin-left: 15px;
+        margin-right: 15px;
+        padding: 25px;
+    }
+
+    #chat-page ul {
+        height: calc(100% - 120px);
+    }
+
+    #messageForm .input-group button {
+        width: 65px;
+    }
+
+    #messageForm .input-group input {
+        width: calc(100% - 70px);
+    }
+
+    .chat-header {
+        padding: 10px;
+    }
+
+    .connecting {
+        top: 60px;
+    }
+
+    .chat-header h2 {
+        font-size: 1.1em;
     }
 }
